--- a/views/about.ejs
+++ b/views/about.ejs
@@ -39,9 +39,52 @@
                 <a href="/contact">Contact</a>
             </div>
         </div>
-        <div class="content_about">
-            About Me
+        <div class="decorations right">
+            <div class="c0 c"></div>
+            <div class="c1 c"></div>
+            <div class="c2 c"></div>
+            <div class="c5 c"></div>
+            <div class="c7 c"></div>
+            <div class="c10 c"></div>
         </div>
-    <script src="js/resume.js"></script>
+        <div class="left content">
+           <p class="L1">
+            "Hello! I'm Varun, a passionate B.Tech student and aspiring web 
+            developer based in Hyderabad, India. I have always been fascinated by 
+            the world of technology and its potential to create meaningful experiences online.
+           </p>
+           <p class="L2">
+            As a junior web developer, I thrive on turning ideas into functional and visually
+             appealing websites. I am proficient in HTML, CSS, and JavaScript, and I enjoy 
+             creating responsive and user-friendly interfaces. My goal is to craft seamless
+              digital experiences that engage and delight users.
+           </p>
+           <p class="L3">
+            Currently pursuing my B.Tech degree, I am constantly expanding my knowledge and
+             honing my skills in web development. I am particularly interested in front-end
+              development and enjoy experimenting with the latest design trends and frameworks
+               to create modern and impactful websites.
+           </p>
+           <p class="L4">
+            Beyond coding, I am passionate about continuous learning and staying up-to-date with
+             the latest advancements in the industry. I believe in the power of collaboration and 
+             enjoy working in a team environment where ideas can be shared and refined.
+           </p>
+           <p class="L5">
+            In my free time, I love exploring new technologies and experimenting with personal
+             projects that allow me to push the boundaries of my creativity. Outside of coding,
+              I enjoy photography, playing the guitar, and immersing myself in nature to find inspiration 
+              for my work.
+           </p>
+           <p class="L6">
+            I am excited about the possibilities that lie ahead in my web development journey.
+             If you're looking for a dedicated and enthusiastic junior web developer or have any
+              exciting opportunities to collaborate, I would love to connect with you. Feel free
+               to reach out to me through my portfolio website at the " Projects " session or connect 
+               with me on LinkedIn.
+           </p>
+        </div>
+        <div class="right"></div>
+        <script src="js/resume.js"></script>
 </body>
 </html>
