--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -39,9 +39,10 @@
             <a href="/contact">Contact</a>
         </div>
     </div>
-    <div class="content_contact">
+    <div class="left content">
         Contact
     </div>
+    <div class="right"></div>
     <script src="js/resume.js"></script>
 </body>
 </html>
