--- a/views/education.ejs
+++ b/views/education.ejs
@@ -39,11 +39,12 @@
                 <a href="/contact">Contact</a>
             </div>
         </div>
-        <div class="content_edu">
+        <div class="left content">
             Education <Details>
                 jsdlcn
             </Details>
         </div>
+        <div class="right"></div>
     <script src="js/resume.js"></script>
 </body>
 </html>
