--- a/views/skills.ejs
+++ b/views/skills.ejs
@@ -39,9 +39,10 @@
                 <a href="/contact">Contact</a>
             </div>
         </div>
-        <div class="content_skills">
+        <div class="left content">
             My Skills
         </div>
+        <div class="right"></div>
     <script src="js/resume.js"></script>
 </body>
 </html>
