--- a/public/css/All.css
+++ b/public/css/All.css
@@ -43,6 +43,143 @@ body{
     background-color: rgb(227, 227, 227);
     transition: 0.2s ;
 }
+.content{
+    margin: 0;
+    padding: 2%;
+    font-size: 18px;
+    margin-left: 4%;
+    margin-right: 4%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.content p{
+    line-height: 25px;
+}
+.content p:hover{
+    cursor: pointer;
+}
+.decorations{
+    display: flex;
+    min-width: 300px;
+    position: absolute;
+    top: 20px;
+    z-index: -1;
+}
+
+
+.c{
+    background-color: rgb(218, 165, 32);
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    transition: all 0.2s;
+    
+}
+
+.c1{
+    width: 20px;
+    height: 20px;
+    box-shadow: 0 0 20px rgb(242, 206, 0);
+    animation: bounce1 0.5s 3 ease-in-out;
+}
+.c2{
+    width: 40px;
+    height: 40px;
+    animation: bounce2 0.5s 3 ease-in-out;
+}
+.c5{
+    width: 80px;
+    height: 80px;
+    animation: bounce5 0.5s 3 ease-in-out;
+}
+.c7{
+    width: 160px;
+    height: 160px;
+    animation: bounce7 0.5s 3 ease-in-out;
+}
+.c10{
+    width: 320px;
+    height: 320px;
+    animation: bounce10 0.5s 3 ease-in-out;
+}
+@keyframes bounce1 {
+    0%{
+        transform: translateY(0);
+        box-shadow: 0 0 0px gold;
+    }
+    50%{
+        transform: translateY(5px);
+        box-shadow: 0 0 0px gold;
+    }
+    100%{
+        transform: translateY(0);
+        box-shadow: 0 0 0px gold;
+    }
+}
+@keyframes bounce1 {
+    0%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(-7px);
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+@keyframes bounce2 {
+    0%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(12px);
+        box-shadow: 0 0 5px gold;
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+@keyframes bounce5 {
+    0%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(-15px);
+        box-shadow: 0 0 10px gold;
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+@keyframes bounce7 {
+    0%{
+        transform: translateY(0);
+    }
+    50%{
+        transform: translateY(17px);
+        box-shadow: 0 0 10px gold;
+    }
+    100%{
+        transform: translateY(0);
+    }
+}
+@keyframes bounce10 {
+    
+    0%{
+        transform: translateY(0);
+        box-shadow: 0 0 50px gold;
+    }
+    50%{
+        transform: translateY(-20px);
+        box-shadow: 0 0 35px gold;
+    }
+    100%{
+        transform: translateY(0);
+        box-shadow: 0 0 20px gold;
+    }
+}
 @media screen and (max-width: 625px) {
     .line_1{
         display: none;
@@ -80,5 +217,43 @@ body{
         position: relative;
         top: 12px;
         left: 11px;
+    }
+    .decorations{
+        flex-direction: column;
+        animation: wave 1.2s 1 ease-in-out;
+        position: absolute;
+        left: 10px;
+    }
+    @keyframes wave {
+        0%{
+            transform: rotate(720deg); 
+        }
+        100%{
+            transform: rotate(0deg); 
+        }
+        
+    }
+    .content{
+        margin-top: 60px;
+    }
+    .c1{
+        width: 10px;
+        height: 10px;
+    }
+    .c2{
+        width: 20px;
+        height: 20px;
+    }
+    .c5{
+        width: 40px;
+        height: 40px;
+    }
+    .c7{
+        width: 80px;
+        height: 80px;
+    }
+    .c10{
+        width: 150px;
+        height: 150px;
     }
 }
