--- a/views/experience.ejs
+++ b/views/experience.ejs
@@ -39,9 +39,10 @@
                 <a href="/contact">Contact</a>
             </div>
         </div>
-        <div class="content_exp">
+        <div class="left content">
             My Experience
         </div>
+        <div class="right"></div>
     <script src="js/resume.js"></script>
 </body>
 </html>
