--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -40,8 +40,70 @@
         </div>
     </div>
     <div class="left content">
-        Contact
+        
+        <div class="Sub_1">
+            <h2>Social media</h2>
+            <div class="roots_1">
+                <div class="S_out" >
+                    <a href="https://www.linkedin.com/in/sai-varun-chowdary-poludasu-908051259" target="_blank">
+                        <div class="socialMedia">
+                            <img src="icons/icons8-linkedin.svg" alt="">
+                            Linked In
+                        </div>
+                    </a>
+                </div>
+                <div class="S_out">
+                    <a href="https://instagram.com/saivarunchowdarypoludasu?igshid=NTc4MTIwNjQ2YQ==" target="_blank">
+                        <div class="socialMedia">
+                            <img src="icons/icons8-instagram-90.png" alt="">
+                            Instagram
+                        </div>
+                    </a>
+                </div>
+                <div class="S_out">
+                    <a href="https://www.facebook.com/saivarunchowdary.poludasu" target="_blank">
+                        <div class="socialMedia">
+                            <img src="icons/icons8-facebook.svg" alt="">
+                            Facebook
+                        </div>
+                    </a>
+                </div>
+                <div class="S_out">
+                    <a href="https://twitter.com/SaiPoludasu" target="_blank">
+                        <div class="socialMedia">
+                            <img src="icons/icons8-twitter-90.png" alt="">
+                            Twitter
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <hr class="hr_5">
+        </div>
+       
+        <div class="Sub_2">
+            <h2>E-mail</h2>
+            <div class="S_out" >
+                <a href="https://mail.google.com/mail/u/0/?fs=1&to=saivarunchowdarypoludasu4248@gmail.com&tf=cm" target="_blank">
+                    <div class="socialMedia">
+                        <img src="icons/Gmail-icons.png" alt="">
+                            Mail me
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="Sub_3">
+            <h2>Phone Number</h2>
+            <div class="S_out" >
+                <a href="tel:919392704248" target="_blank">
+                    <div class="socialMedia call">
+                        <img src="icons/icons8-phone.svg" alt="">
+                            <p>Click to call</p>
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
+    
     <div class="right"></div>
     <script src="js/resume.js"></script>
 </body>
