--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -86,7 +86,7 @@
                 <a href="https://mail.google.com/mail/u/0/?fs=1&to=saivarunchowdarypoludasu4248@gmail.com&tf=cm" target="_blank">
                     <div class="socialMedia">
                         <img src="icons/Gmail-icons.png" alt="">
-                            Mail me
+                           <p> Mail me</p>
                     </div>
                 </a>
             </div>
