--- a/views/myProjects.ejs
+++ b/views/myProjects.ejs
@@ -40,7 +40,25 @@
             </div>
         </div>
         <div class="left content">
-            Projects
+            <div class="Sub_1 height_1">
+                <h2>Git hub repository</h2>
+                <div class="S_out git" >
+                    <a href="https://mail.google.com/mail/u/0/?fs=1&to=saivarunchowdarypoludasu4248@gmail.com&tf=cm" target="_blank">
+                        <div class="socialMedia">
+                            <img src="icons/Gmail-icons.png" alt="">
+                                <p>Open</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="UnSub_1">
+            <h2>Deployed Projects</h2>
+            <div class="prj_links">
+                <a href="https://todo-manager-2mqv.onrender.com/" target="_blank">To do Application</a>
+                <a href="https://test-chat-me-qo7j.onrender.com/" target="_blank">Signup and SignIn using Node Js</a>
+                <a href="https://teamx-learner.onrender.com" target="_blank">A flask website having Chat Box</a>
+            </div>
         </div>
         <div class="right"></div>
     <script src="js/resume.js"></script>
