--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -94,7 +94,7 @@
         <div class="Sub_3">
             <h2>Phone Number</h2>
             <div class="S_out" >
-                <a href="tel:919392704248" target="_blank">
+                <a href="tel:+919392704248" target="_blank">
                     <div class="socialMedia call">
                         <img src="icons/icons8-phone.svg" alt="">
                             <p>Click to call</p>
