--- a/views/myProjects.ejs
+++ b/views/myProjects.ejs
@@ -41,7 +41,10 @@
         </div>
         <div class="left content">
             <div class="Sub_1 height_1">
-                <h2>Git hub repository</h2>
+                <a href="https://github.com/VarunChowdary0" target="_blank">
+                    <h2>Git hub repository</h2>
+                    <p class="gitName">VarunChowdary0</p>
+                </a>
                 <div class="S_out git" >
                     <a href="https://mail.google.com/mail/u/0/?fs=1&to=saivarunchowdarypoludasu4248@gmail.com&tf=cm" target="_blank">
                         <div class="socialMedia">
@@ -55,6 +58,7 @@
         <div class="UnSub_1">
             <h2>Deployed Projects</h2>
             <div class="prj_links">
+                <a href="https://custom-tab.onrender.com/" target="_blank">A Custom Tab with React.js</a>
                 <a href="https://todo-manager-2mqv.onrender.com/" target="_blank">To do Application</a>
                 <a href="https://test-chat-me-qo7j.onrender.com/" target="_blank">Signup and SignIn using Node Js</a>
                 <a href="https://teamx-learner.onrender.com" target="_blank">A flask website having Chat Box</a>
